--- a/css/style.css
+++ b/css/style.css
@@ -178,3 +178,27 @@ p {
 .call p {
   margin-bottom: 20px;
 }
+
+/* Portfólio */
+
+.portfolio {
+  width: 100%;
+  background: #000;
+  padding: 40px 0;
+}
+
+.portfolio .subtitulo {
+  color: #fec63e;
+}
+
+.portfolio .subtitulo:after {
+  background: #fec63e;
+}
+
+.portfolio_lista li:last-child {
+  margin-top: 20px;
+}
+
+.portfolio .call p {
+  color: #fff;
+}
